--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ name: WeRobots Homepage
 url: https://werobots-cottbus.github.io
 
 markdown: kramdown
-theme: jekyll-theme-hacker
-# remote_theme: 
-
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme
